# presentation-studio-mcp

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/asset-worker/: pyproject.toml
apps/asset-worker/src/: __init__.py  main.py  models.py  runner.py
apps/asset-worker/src/operations/: __init__.py  contact_sheet.py  contain.py  cover_crop.py  montage.py  normalize.py  overlay.py  pad_to_canvas.py  resize.py  thumbnail.py
apps/asset-worker/src/utils/: __init__.py  color_utils.py  image_utils.py  io_utils.py  logging_utils.py
apps/asset-worker/tests/: test_operations.py
apps/cli/: package.json
apps/cli/src/: index.ts
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts  resourceRegistry.ts  server.ts  toolRegistry.ts
apps/renderer/: package.json
apps/renderer/src/: index.ts  layoutRegistry.ts  renderDeck.ts  renderSlide.ts  themeRegistry.ts
assets/brands/acme/: brand.json
assets/brands/magmalabs/: brand.json
docs/: architecture.md  asset-worker.md  customization.md  deck-spec.md  layouts.md  mcp-tools.md
examples/brochure/: assets-plan.json  brief.json  deck-spec.json
examples/case-study/: brief.json  deck-spec.json
examples/neutral-brochure/: README.md  brief.json  deck-spec.json
examples/proposal/: brief.json  deck-spec.json
examples/quarterly-review/: brief.json  deck-spec.json
tests/: audit.test.ts  brief.test.ts  deckSpec.test.ts  extractFromPptx.test.ts  renderDeck.test.ts  studioConfig.test.ts  updateSlide.test.ts
(+69 files in other folders)
